# tuya-psk-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  conftest.py  docker-compose.example.yaml  pyproject.toml  repository.yaml
addon/: Dockerfile  config.yaml  run.sh
bridge/: pyproject.toml
bridge/tests/: test_ha_mqtt.py  test_main.py  test_mqtt_decoder.py  test_packaging.py  test_psk_derivation.py  test_server_config.py
bridge/tuya_psk_bridge/: __init__.py  config.py  ha_mqtt.py  main.py  models.py  mqtt_decoder.py  mqtt_runtime.py  psk_frontend.py  server.py
custom_components/tuya_psk_bridge/: __init__.py  config_flow.py  const.py  diagnostics.py  manifest.json
custom_components/tuya_psk_bridge/tests/: test_diagnostics.py
custom_components/tuya_psk_bridge/translations/: en.json
docs/: architecture.md  deployment-ha-addon.md  deployment-uat.md  ha-custom-integration.md  protocol-notes.md  router-openwrt-glinet.md  security.md
examples/: devices.example.yaml  router-openwrt-nftables-runtime-rules.sh  router-openwrt-rollback.sh  router-openwrt-runtime-rules.sh
