[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuya-psk-bridge"
version = "0.1.0"
description = "Decode Tuya PSK MQTT payloads and expose to Home Assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pycryptodomex>=3.20",
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
    "sslpsk>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tuya_psk_bridge"]
