[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuya-psk-bridge"
version = "0.1.4"
description = "Decode Tuya PSK MQTT payloads and expose to Home Assistant"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pycryptodomex>=3.20",
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
    "sslpsk @ git+https://github.com/drbild/sslpsk.git@d88123a75786953f82f5e25d6c43d9d9259acb62",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tuya_psk_bridge"]
